--- a/notebooks/PCA.html
+++ b/notebooks/PCA.html
@@ -13269,10 +13269,10 @@ directions in $\mathbf{R}^{m}$.</p>
 
 
 
-<div id="c2fea90a-5e6a-4a47-a185-ab1bf6ee6069"></div>
+<div id="41877929-c983-4f32-aa47-6c9fd175b157"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#c2fea90a-5e6a-4a47-a185-ab1bf6ee6069');
+var element = $('#41877929-c983-4f32-aa47-6c9fd175b157');
 (function(root) {
   function embed_document(root) {
     
@@ -13398,7 +13398,7 @@ of the data into the $u_1$ direction has the largest variance).  Similarly $u_2$
 <p>Here we carry out analysis of some (very old) data on arrests in the USA.  This dataset
 is distributed with the R language package and it can be downloaded from 
 <a href="https://vincentarelbundock.github.io/Rdatasets/csv/datasets/USArrests.csv">here</a>.  For each state it gives the rates of murder, rape and assault, as well as the percentage of population that lives in urban areas.  Note this is from 1975 so don't draw any real conclusions from it!</p>
-<p>This analysis follows section 10.2.1 of <a href="http://faculty.marshall.usc.edu/gareth-james/ISL/">Introduction to Statistical Learning with R</a> by James, et. al.</p>
+<p>This analysis follows section 10.2.1 of <a href="http://faculty.marshall.usc.edu/gareth-james/ISL/">Introduction to Statistical Learning with R</a> by James, et. al, called ISLR below.</p>
 <p>First we load in the data.</p>
 
 </div>
@@ -13580,10 +13580,10 @@ is distributed with the R language package and it can be downloaded from
 
 
 
-<div id="22c3b07d-c8b0-4cdb-be27-473ade83a0b1"></div>
+<div id="47c80537-d52f-47ad-84f0-ea1333b086f1"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#22c3b07d-c8b0-4cdb-be27-473ade83a0b1');
+var element = $('#47c80537-d52f-47ad-84f0-ea1333b086f1');
 (function(root) {
   function embed_document(root) {
     
@@ -13621,7 +13621,7 @@ var element = $('#22c3b07d-c8b0-4cdb-be27-473ade83a0b1');
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>In the diagram above, we see that the red arrow points in the direction in which the original "UrbanPop" is projected.  So moving DOWN in the graph corresponds to increasing percentage of urban population.  Rural states like Mississippi, Vermont, and West Virginia are up above;
+<p>In the diagram above (which mimics Figure 10.1 in ISLR), we see that the red arrow points in the direction in which the original "UrbanPop" is projected.  So moving DOWN in the graph corresponds to increasing percentage of urban population.  Rural states like Mississippi, Vermont, and West Virginia are up above;
 Urban states like California, New Jersey, Massachusetts are down below.</p>
 <p>The three crime arrows point to the left, with slighly different orientations.  This tells us that moving to the left gives generally higher crime rates, though the different crimes interact differently with population.</p>
 <p>So we can think of PC1 as a good amalgamation of the overall crime measure and PC2 as measuring urban population.</p>
